src/component/CulturePage/IntroImages/style.css
.img-formatting {
  width: auto;
  height: 400px;
  object-fit: cover;
  border: 1px solid;
  box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25);
}

.for-padding {
  padding: 30px;
  margin-top: 390px;
}

.intro-images {
  display: flex;
  flex-direction: row;
  width: 1050px;
  z-index: 1;
}

